--- a/public/stylesheets/joodo_ttt.css
+++ b/public/stylesheets/joodo_ttt.css
@@ -1,6 +1,4 @@
 body {
-    background: #e3b200;
+    background: white;
     font-family: sans-serif;
-    width: 600px;
-    margin: 30px auto 0 auto;
 }
